============= 0.6.1 release =======================

dim mar  5 23:32:14 CET 2006 Dodji Seketeli

	* configure.in,docs/Makefile.am: 
	  unwire gtk-doc temporarily. Couldn't make it
	  distcheck otherwise.
	* tests/Makefile.am: add global-vars.sh.in to EXTRA_DIST files.
	* confifure.in: increase library REVISION number, for 0.6.1 release.

2006-03-01  Dom Lachowicz <cinamod@hotmail.com>

	* src/cr-tknzr.c: Parse fractional parts of numbers properly (bug 333057)
	* src/cr-utils.[ch]: Ditto
	* configure.in: bump version to so that librsvg can depend on its fixes
	
2005-11-16  Tor Lillqvist  <tml@novell.com>

	* libcroco-zip.in: New file. libcroco-zip is used to build a
	libcroco distribution for Win32.

	* Makefile.am: Distribute libcroco-zip.in

	* configure.in: AC_SUBST also LIBCROCO_CURRENT and LIBCROCO_AGE as
	libcroco-zip needs them to construct the DLL name. Check for
	Win32, set OS_WIN32 Automake conditional. Expand libcroco-zip.

	* src/Makefile.am: Use -no-undefined on Win32. Link libcroco with
	GLIB2_LIBS and LIBXML2_LIBS.

Thu May  5 19:15:27 CEST 2005 Dodji Seketeli <dodji@gnome.org>

	* src/cr-string.h, cr-parser.c: applied a patch from Peter Moulder
	to fix a typo in cr-parser.c and add G_BEGIN_DECLS/G_END_DECLS to
	cr-string.h

Thu May  5 18:47:10 CEST 2005 Dodji Seketeli <dodji@gnome.org>

	* docs/reference/tmpl/*.sgml: added these to the archive.
	* docs/reference/libcroco-docs.sgml: added this to the archive.

Thu may  5 18:35:04 CEST 2005 Dodji Seketeli <dodji@gnome.org> 

	* src/*.[ch]: made wak loads of comments change to comply with 
	gtk-doc. Big thanks to Sven Herzberg for the initial work on this
	topic.

2005-04-01  Sven Herzberg  <herzi@gnome-de.org>

	* autogen.sh: require automake 1.7
	* configure.in: added a check for gtk-doc, build
	docs/reference/Makefile
	* docs/Makefile.am: added the reference subdir
	* src/cr-additional-sel.c: migrated the comments to gtk-doc style (sed
	rocks)