@@ -235,9 +235,6 @@ void
 cr_utils_dump_n_chars2 (guchar a_char, 
                         GString *a_string,
                         glong a_nb) ;
-gdouble
-cr_utils_n_to_0_dot_n (glong a_n, glong decimal_places) ;
-
 GList *
 cr_utils_dup_glist_of_string (GList *a_list) ;
 
